--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,10 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "name": "lca-spa",
   "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
-  "license": "MIT",
   "private": true,
   "dependencies": {
     "angular": "1.2.x",
+    "angular-resource": "~1.2.x",
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
