--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
-    "bootstrap": "~3.2"
+    "bootstrap": "~3.2",
+    "d3": "~3"
   }
 }
