--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
     "bootstrap": "~3.2",
-    "d3": "~3"
+    "d3": "~3",
+    "ngprogress": "1.0.7"
   }
 }
