Vis: Add color configuration to sankey

--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-mocks": "~1.2.x",
     "bootstrap": "~3.2",
     "d3": "~3",
+    "colorbrewer": null,
     "ngprogress": "1.0.7"
   }
 }
