Vis: Add spinner directive and display it during data load Issue #38

--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "bootstrap": "~3.2",
     "d3": "~3",
     "colorbrewer": null,
-    "ngprogress": "1.0.7"
+    "ngprogress": "1.0.7",
+    "angular-spinner": null
   }
 }
