--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "angular": "1.2.x",
+    "angular-local-storage": null,
     "angular-resource": "~1.2.x",
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
@@ -11,7 +12,6 @@
     "bootstrap": "~3.2",
     "d3": "~3",
     "colorbrewer": null,
-    "ngprogress": "1.0.7",
     "angular-spinner": null,
     "normalize.css": null,
     "array.prototype.find": null
