Vis: Use angular ui bootstrap directive to display error message (#46)

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "angular": "1.2.x",
+        "angular-bootstrap": null,
         "angular-local-storage": null,
         "angular-resource": "1.2.x",
         "angular-loader": "1.2.x",
