Vis: Add LCIA Method detail view, link from home page method list (#90)

--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,6 @@
         "angular-spinner": null,
         "normalize.css": null,
         "array.prototype.find": null,
-        "angular-ui-router": "0.2.x",
-        "angular-breadcrumb" : "0.2.x"
+        "angular-ui-router": "0.2.x"
     }
 }
