--- a/bower.json
+++ b/bower.json
@@ -7,16 +7,18 @@
     "angular-bootstrap": null,
     "angular-local-storage": null,
     "angular-resource": "1.3.x",
+    "angular-spinner": null,
     "angular-mocks": "1.3.x",
+    "angular-ui-router": "0.2.x",
+    "array.prototype.find": null,
     "bootstrap": "~3.2",
+    "colorbrewer": null,
     "d3": "~3",
     "d3-plugins": null,
     "d3-tip": null,
-    "colorbrewer": null,
-    "angular-spinner": null,
-    "normalize.css": null,
-    "array.prototype.find": null,
-    "angular-ui-router": "0.2.x"
+    "jquery": "2.1.3",
+    "ng-grid": "2.x",
+    "normalize.css": null
   },
   "resolutions": {
     "angular": "1.3.x"
