--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "d3": "~3",
     "d3-plugins": null,
     "d3-tip": null,
-    "isteven-angular-multiselect": null,
+    "isteven-angular-multiselect": "4.x",
     "jquery": "2.1.3",
     "lodash": null,
     "ng-grid": "2.x",
