--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "angular-mocks": "1.3.x",
     "angular-ui-router": "0.2.x",
     "array.prototype.find": null,
-    "bootstrap": "~3.2",
+    "bootstrap": "3.x",
     "colorbrewer": null,
     "d3": "~3",
     "d3-plugins": null,
