--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "d3-tip": null,
     "isteven-angular-multiselect": "4.x",
     "jquery": "2.1.3",
+    "ng-csv": null,
     "ng-grid": "2.x",
     "normalize.css": null
   },
