--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "shelljs": "^0.2.6",
     "karma-junit-reporter": "^0.2.2",
     "karma-ie-launcher": "~0.1",
-    "karma-firefox-launcher": "~0.1"
+    "karma-firefox-launcher": "~0.1",
+    "karma-safari-launcher": "~0.1"
   },
   "scripts": {
     "postinstall": "bower install",
