--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "lca-spa",
-    "version": "0.0.0",
-    "private": true,
+  "name": "lca-app",
+  "version": "0.0.1",
+  "private": true,
   "devDependencies": {
     "karma": "~0.10",
     "protractor": "^1.1.1",
@@ -11,23 +11,26 @@
     "karma-junit-reporter": "^0.2.2",
     "karma-ie-launcher": "~0.1",
     "karma-firefox-launcher": "~0.1",
-    "karma-safari-launcher": "~0.1"
+    "karma-safari-launcher": "~0.1",
+    "grunt": "~0.4.0",
+    "grunt-recess": "~0.3",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-copy": "~0.4.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-uglify": "~0.1.1",
+    "grunt-html2js": "~0.1.0",
+    "grunt-bower-concat": "~0.5.0"
   },
   "scripts": {
     "postinstall": "bower install",
-
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1",
-
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
     "test-single-run": "karma start karma.conf.js  --single-run",
-
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
-
     "preprotractor": "npm run update-webdriver",
     "protractor": "protractor e2e-tests/protractor.conf.js"
-
   }
 }
