--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "lca-spa",
-  "version": "0.0.0",
+  "name": "lca-app",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "angular": "1.3.x",
