--- a/package.json
+++ b/package.json
@@ -2,25 +2,31 @@
   "name": "lca-app",
   "version": "0.0.1",
   "private": true,
-  "copyright"  : "Copyright (c) (2015) California Department of Resources Recycling and Recovery (CalRecycle). All rights reserved.",
+  "copyright": "Copyright (c) (2015) California Department of Resources Recycling and Recovery (CalRecycle). All rights reserved.",
+  "homepage": "http://uo-lca.github.io/",
+  "repository" :
+  { "type" : "git"
+  , "url" : "https://github.com/uo-lca/CalRecycleLCA.git"
+  },
   "devDependencies": {
-    "karma": "~0.10",
-    "protractor": "2.0.0",
-    "http-server": "^0.6.1",
     "bower": "^1.4.1",
-    "shelljs": "^0.2.6",
-    "karma-junit-reporter": "^0.2.2",
-    "karma-ie-launcher": "~0.1",
-    "karma-firefox-launcher": "~0.1",
-    "karma-safari-launcher": "~0.1",
     "grunt": "~0.4.0",
-    "grunt-recess": "~0.3",
+    "grunt-bower-concat": "~0.5.0",
     "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-copy": "~0.4.0",
     "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-copy": "~0.4.0",
     "grunt-contrib-uglify": "~0.1.1",
     "grunt-html2js": "~0.1.0",
-    "grunt-bower-concat": "~0.5.0"
+    "grunt-ngdocs": "^0.2.7",
+    "grunt-recess": "~0.3",
+    "http-server": "^0.6.1",
+    "karma": "~0.10",
+    "karma-firefox-launcher": "~0.1",
+    "karma-ie-launcher": "~0.1",
+    "karma-junit-reporter": "^0.2.2",
+    "karma-safari-launcher": "~0.1",
+    "protractor": "2.0.0",
+    "shelljs": "^0.2.6"
   },
   "scripts": {
     "postinstall": "bower install",
