--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "karma-ie-launcher": "~0.1",
     "karma-junit-reporter": "^0.2.2",
     "karma-safari-launcher": "~0.1",
-    "protractor": "2.0.0",
+    "protractor": "^2.0.0",
     "shelljs": "^0.2.6"
   },
   "scripts": {
