--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "copyright": "Copyright (c) (2015) California Department of Resources Recycling and Recovery (CalRecycle). All rights reserved.",
   "homepage": "http://uo-lca.github.io/",
-  "repository" :
-  { "type" : "git"
-  , "url" : "https://github.com/uo-lca/CalRecycleLCA.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/uo-lca/CalRecycleLCA.git"
   },
   "devDependencies": {
     "bower": "^1.4.1",
@@ -39,5 +39,8 @@
     "update-webdriver": "webdriver-manager update",
     "start-webdriver": "webdriver-manager start",
     "protractor": "protractor e2e-tests/protractor.conf.js"
+  },
+  "dependencies": {
+    "jasmine": "^2.3.1"
   }
 }
