--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,7 @@
     "jquery": "2.1.3",
     "ng-csv": "0.3.x",
     "ng-grid": "2.x",
-    "normalize.css": "3.0.x",
-    "plottable": "~1.5.2"
+    "normalize.css": "3.0.x"
   },
   "resolutions": {
     "angular": "1.3.x"
